--- a/templates/mainsite/architecture.html
+++ b/templates/mainsite/architecture.html
@@ -218,10 +218,16 @@
                                 every 2 years, since 2004. The festival is renowned for being held on a large scale, drawing top international artists across 
                                 various music genres, from rock and pop, to electronic and indie.{% endblocktranslate %}
                               </p>
-                              <p class="card-text"><strong>Location:</strong> It is held in Lisbon, usually at the Parque de Bela Vista, which is a large 
+                              <p class="card-text"><strong>{% translate 'Location:' %}</strong> 
+                                {% blocktranslate %}
+                                It is held in Lisbon, usually at the Parque de Bela Vista, which is a large 
                                 park that can accomodate the expansive stages, audience areas and entertainment zones that are required to host the festival.
+                                {% endblocktranslate %}
+                              </p>
                                 
-                              <p class="card-text"><strong>Dates:</strong> Not fixed, but usually in the month of September.</p>
+                              <p class="card-text"><strong>{% translate 'Dates:' %}</strong>
+                                {% translate 'Not fixed, but usually in the month of September.' %}
+                              </p>
                               
                           </div>
                       </div>
@@ -244,17 +250,24 @@
                   <div class="row">
                       <div class="col-md-12">
                           <div class="card-body">
-                              <p class="card-text">Also known as 'Dia de Santo António', the Feast Day of St. Anthony is one of Portugal's most cherished
+                              <p class="card-text">
+                                {% blocktranslate %}
+                                Also known as 'Dia de Santo António', the Feast Day of St. Anthony is one of Portugal's most cherished
                                 festivals where St.Anthony is considered the Patron Saint of lovers and the protector of lost items. The festival combines religious observance
                                 with popular festivities that reflect the deep cultural heritage and community spirit among the people.
+                                {% endblocktranslate %}
                               </p>
                               <p>
+                                {% blocktranslate %}
                                 One of the unique aspects of the Feast Day of Saint Anthony is the mass wedding ceremony, also known as 'Casamentos de Santa António' (Saint Anthony's Weddings).
                                 Every year, several selected couples are married simultaneously in a high-profile event that symbolizes love and community. Saint Anthony is revered as the
                                 match-maker saint, which makes these weddings particularly meaningful.
+                                {% endblocktranslate %}
                               </p>
-                              <p class="card-text"><strong>Location:</strong> Celebrated all over Portugal, but most ferevently in Lisbon, as that is Saint Anthony's place of birth.</p>
-                              <p class="card-text"><strong>Dates:</strong> June 13</p>
+                              <p class="card-text"><strong>{% translate 'Location:' %}</strong> 
+                                {% translate "Celebrated all over Portugal, but most ferevently in Lisbon, as that is Saint Anthony's place of birth." %}
+                              </p>
+                              <p class="card-text"><strong>{% translate 'Dates:' %}</strong>{% translate 'June 13' %}</p>
                           </div>
                       </div>
                   </div>
@@ -270,18 +283,27 @@
                   <div class="row">
                       <div class="col-md-12">
                           <div class="card-body">
-                              <p class="card-text">The São João festival is one of Portugal's most lively and colorful celebrations. It honors Saint John the Baptist and marks the
+                              <p class="card-text">
+                                {% blocktranslate %}
+                                The São João festival is one of Portugal's most lively and colorful celebrations. It honors Saint John the Baptist and marks the
                                 beginning of the Summer season. It is characterized by a mix of religious and traditional festivities, which make it a significant cultural event with deep
                                 roots in Portuguese tradition.
+                                {% endblocktranslate %}
                               </p>
                               <p>
+                                {% blocktranslate %}
                                 Keeping with ancient tradition, bonfires are a central part of São João, around which people gather to celebrate, sing and jump over the flames as a symbol of
                                 protection and purification. One of the more amusing and unique traditions is the use of soft plastic hammers. Festival-goers playfully hit each other on the head
                                 with these hammers to create a friendly and joyful reaction amongst themselves.
+                                {% endblocktranslate %}
                               </p>
-                              <p class="card-text"><strong>Location:</strong> Mainly celebrated in Porto, and also other parts of Northern Portugal like Braga and Vila do Conde, although
-                              on a smaller scale.</p>
-                              <p class="card-text"><strong>Dates:</strong> June 23</p>
+                              <p class="card-text"><strong>{% translate 'Location:' %}</strong>
+                                {% blocktranslate %}
+                                Mainly celebrated in Porto, and also other parts of Northern Portugal like Braga and Vila do Conde, although
+                                on a smaller scale.
+                                {% endblocktranslate %}
+                              </p>
+                              <p class="card-text"><strong>{% translate 'Dates:' %}</strong> June 23</p>
                           </div>
                       </div>
                   </div>
@@ -298,15 +320,25 @@
                       <div class="col-md-12">
                           <div class="card-body">
                               <p class="card-text">
+                                {% blocktranslate %}
                                 The Carinval in Portugal, known locally as 'Carnaval', is a pre-Lenten festival celebrated with great enthusiasm and a variety of rich traditions.
-                                It takes place right before Ash Wednesday and features a blend of religious, pagan and modern elements.</p>
-                                <p>The Carnaval is widely known for its elaborate
+                                It takes place right before Ash Wednesday and features a blend of religious, pagan and modern elements.
+                                {% endblocktranslate %}
+                              </p>
+                              <p>
+                                {% blocktranslate %}
+                                The Carnaval is widely known for its elaborate
                                 parades featuring colorful floats, vibrant costumes and the lively samba bands. The participants in these parades often dress in an extravagant manner,
                                 reflecting both traditional themes and social or political commentary.
+                                {% endblocktranslate %}
                               </p>
-                              <p class="card-text"><strong>Location:</strong> The festivities take place all over Portugal, but the most famous celebrations can be found in 
-                              the regions of Torres Vedras, Ovar, Loulé and Madeira.</p>
-                              <p class="card-text"><strong>Dates:</strong> The days leading up to Ash Wednesday (decided by the Christian Calendar)</p>
+                              <p class="card-text"><strong>{% translate 'Location:' %}</strong>
+                                {% blocktranslate %}
+                                The festivities take place all over Portugal, but the most famous celebrations can be found in 
+                                the regions of Torres Vedras, Ovar, Loulé and Madeira.
+                                {% endblocktranslate %}
+                              </p>
+                              <p class="card-text"><strong>{% translate 'Dates:' %}</strong>{% translate 'The days leading up to Ash Wednesday (decided by the Christian Calendar)' %}</p>
                           </div>
                       </div>
                   </div>
@@ -323,13 +355,16 @@
                     <div class="col-md-12">
                         <div class="card-body">
                             <p class="card-text">
+                              {% blocktranslate %}
                               Semana Santa (Holy Week) is a deeply significant and solemn festival that commemorates the passion of Christ. It has been celebrated
-                            for centuries, and is deep rooted in the Roman Catholic tradition. In Portugal and many other Catholic countries across the globe, these 
-                          celebrations are a spiritual experience that involves processions, rituals and ceremonies.</p>
-                              <p>The celebration of Holy Week includes 4 parts, namely, Palm Sunday, Holy Thursday, Good Friday and Easter Sunday.
+                              for centuries, and is deep rooted in the Roman Catholic tradition. In Portugal and many other Catholic countries across the globe, these 
+                              celebrations are a spiritual experience that involves processions, rituals and ceremonies.
+                              {% endblocktranslate %}
                             </p>
-                            <p class="card-text"><strong>Location:</strong> All across Portugal.</p>
-                            <p class="card-text"><strong>Dates:</strong> It spans the last week of Lent. Starting on Palm Sunday and ending on Easter Sunday.</p>
+                            <p>{% translate 'The celebration of Holy Week includes 4 parts, namely, Palm Sunday, Holy Thursday, Good Friday and Easter Sunday.' %}
+                            </p>
+                            <p class="card-text"><strong>{% translate 'Location:' %}</strong>{% translate 'All across Portugal.' %}</p>
+                            <p class="card-text"><strong>{% translate 'Dates:' %}</strong>{% translate 'It spans the last week of Lent. Starting on Palm Sunday and ending on Easter Sunday.' %}</p>
                         </div>
                     </div>
                 </div>
@@ -346,14 +381,20 @@
                   <div class="col-md-12">
                       <div class="card-body">
                           <p class="card-text">
+                            {% blocktranslate %}
                             Festas Das Cruzes (Festival of Crosses) is a traditional Portuguese festival that has deep religious roots and commemorates the
-                          discovery of a crucifix by the local people, which is believed to have miraculous origins. It is not only a religious event but also
-                        a time of joyful celebration, reflecting the community's culture and heritage/p>
-                            <p>This festival is a vivid example of how Portugal preserves and celebrates its rich history and religious heritage through annual
-                              community events by blending devotion with cultural festivity.
+                            discovery of a crucifix by the local people, which is believed to have miraculous origins. It is not only a religious event but also
+                            a time of joyful celebration, reflecting the community's culture and Heritage
+                            {% endblocktranslate %}
                           </p>
-                          <p class="card-text"><strong>Location:</strong> Primarily celebrated in Barcelos, located in Northern Portugal.</p>
-                          <p class="card-text"><strong>Dates:</strong> The beginning of Spring.</p>
+                          <p>
+                            {% blocktranslate %}
+                            This festival is a vivid example of how Portugal preserves and celebrates its rich history and religious heritage through annual
+                            community events by blending devotion with cultural festivity.
+                            {% endblocktranslate %}
+                          </p>
+                          <p class="card-text"><strong>{% translate 'Location:' %}</strong>{% translate 'Primarily celebrated in Barcelos, located in Northern Portugal.' %}</p>
+                          <p class="card-text"><strong>{% translate 'Dates:' %}</strong>{% translate 'The beginning of Spring.' %}</p>
                       </div>
                   </div>
               </div>
