--- a/static/signin.css
+++ b/static/signin.css
@@ -40,8 +40,8 @@ background-color: #0056b3; /* Custom color for the primary button */
 
 /* Position the first image on the left side */
 .gif-background {
-  height: 40vh;
-  width: 470px;
+  height: 55vh;
+  width:520px;
   margin-left: 40px;
   position: fixed; /* Or 'absolute' if you want it to scroll with the page */
   left: 0; /* Align to the left side */
@@ -54,17 +54,17 @@ background-color: #0056b3; /* Custom color for the primary button */
 
 /* Position the second image on the right side */
 .gif-background2 {
-  height: 10vh;
-  width: 400px;
+  height: 50vh;
+  width: 350px;
   margin-right: 100px;
   position: fixed; /* Or 'absolute' if you want it to scroll with the page */
   right: 0; /* Align to the right side */
-  top: 65%; /* Center vertically */
+  top: 60%; /* Center vertically */
   transform: translateY(-50%); /* Adjust to center the image vertically */
-  box-shadow: inset 0 0 15px 0px red;
+  /* box-shadow: inset 0 0 15px 0px red;
   background-color: #dad5b6;
   border-radius: 15px;
-  border: red 2px solid;
+  border: red 2px solid; */
   /* animation: rotateY 12s ease-in-out alternate-reverse infinite; */
   
   /* Ensure it overlaps the background */
