--- a/templates/login/signin.html
+++ b/templates/login/signin.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-<img class="gif-background" src="{% static 'Image1.png' %}" alt="GIF" class="gif">
-<img class="gif-background2" src="{% static 'Bem-Vindo Text (2).png' %}" alt="GIF" class="gif">
-<img class="gif-background3" src="{% static 'Welcome Text (2).png' %}" alt="GIF" class="gif">
+<img class="gif-background" src="{% static 'Cock with Title_Left Side.png' %}" alt="GIF" class="gif">
+<img class="gif-background2" src="{% static '6 Tag Lines Together_Right Side.png' %}" alt="GIF" class="gif">
+<!-- <img class="gif-background3" src="{% static 'Welcome Text (2).png' %}" alt="GIF" class="gif"> -->
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-6">
