--- a/templates/mainsite/test_dashboard.html
+++ b/templates/mainsite/test_dashboard.html
@@ -86,7 +86,7 @@
     <a class="navbar-brand" href="#">
       
       <img src="{% static 'Logo2.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
-      <h1><span class="text-green" style="margin-left: 10px;">Portu</span><span class="text-red">Pro</span></h1>
+      <h1><span class="text-green" style="margin-left: 10px; text-shadow: rgb(233, 225, 183) 1px 1px; ">Portu</span><span class="text-red" style="text-shadow: rgb(233, 225, 183) 1px 1px;">Pro</span></h1>
       
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -228,7 +228,7 @@
     </div>
     
     <div class="col-md-4 widgets-container pl-md-6">
-      <h2 style="color: black; font-weight: bold">Weather Widget</h2>
+      <h2 style="color: black; font-weight: bold; width: 120%;">Weather Widget</h2>
       <div class="card mb-3 weather-widget">
         <div class="card-body">
             
@@ -245,7 +245,7 @@
     
       <!-- Add other widgets like activity tracker and twitter feed -->
       
-      <h2 style="color: black; margin-top: 14%; font-weight: bold">Activity Tracker
+      <h2 style="color: black; margin-top: 14%; font-weight: bold; width: 120%;">Activity Tracker
         <a href="#" data-toggle="tooltip" data-html="true" title="Yellow Background - Current Date<br>Green Background - Activity Goal Met<br>Green Text - Question Goal Met" 
           style="font-size: 20px; color: white;">
           <i class="fas fa-info-circle"></i>
