--- a/templates/login/signin.html
+++ b/templates/login/signin.html
@@ -14,7 +14,7 @@
 <body>
 
 <img class="gif-background" src="{% static 'Big Logo.png' %}" alt="GIF" class="gif">
-<img class="gif-background2" src="{% static '6 Tags on right.png' %}" alt="GIF" class="gif">
+<img class="gif-background2" src="{% static '6 Tags on right (1).png' %}" alt="GIF" class="gif">
 <!-- <img class="gif-background3" src="{% static 'Welcome Text (2).png' %}" alt="GIF" class="gif"> -->
 <img class="gif-background4" src="{% static 'Big Website Title.png' %}" alt="GIF" class="gif">
 <div class="container mt-5">
@@ -23,7 +23,7 @@
       <div class="card" id="login-card">
         <div class="card-body">
           <div class="text-center mb-4">
-            <img src="{% static 'Small Logo for Centre.png' %}" class="mb-4" alt="Portuguese Flag" style="width: 250px; height: 250px;"> <!-- Adjust size as needed -->
+            <img src="{% static 'Small Logo for Centre.png' %}" class="mb-4" alt="Portuguese Flag" style="width: 200px; height: 200px;"> <!-- Adjust size as needed -->
             <!-- <h1><b><span class="text-green" style="color:green; font-size: 50px; text-shadow: black 2px 2px;">Portu</span><span class="text-red" style="color:rgb(202, 41, 41); font-size: 50px; text-shadow: black 2px 2px;">Pro</span></b></h1> -->
             <p>A Portuguese language learning website to help you sharpen and develop your Portuguese. <br><br><span style="font-weight: bold"> Enter your login details below.</span></p>
           </div>
